[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Level/Timer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level/ObjectiveList.gd" type="Script" id=2]
[ext_resource path="res://Resources/monofonto.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/UI/Notepad/Notpad.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
outline_size = 1
outline_color = Color( 0.521569, 0.521569, 0.521569, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 1 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 34
outline_color = Color( 0.443137, 0.443137, 0.443137, 1 )
font_data = ExtResource( 3 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "5:00"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ObjectiveBackground" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.666667 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 256, 0 )
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveList" type="VBoxContainer" parent="ObjectiveBackground"]
anchor_left = 0.79
anchor_right = 0.99
anchor_bottom = 1.0
margin_left = -202.24
margin_right = -5.0
margin_bottom = 146.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 21
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopSpacer" type="Control" parent="ObjectiveBackground/ObjectiveList"]
margin_right = 248.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_stretch_ratio = 0.25

[node name="ObjectiveLabel" type="Label" parent="ObjectiveBackground/ObjectiveList"]
margin_top = 49.0
margin_right = 248.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objectives:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective1" type="Label" parent="ObjectiveBackground/ObjectiveList"]
margin_top = 112.0
margin_right = 248.0
margin_bottom = 129.0
size_flags_horizontal = 3
text = "Get coffee from the breakroom "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective2" type="Label" parent="ObjectiveBackground/ObjectiveList"]
margin_top = 150.0
margin_right = 248.0
margin_bottom = 167.0
text = "Talk to officer Smith"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective3" type="Label" parent="ObjectiveBackground/ObjectiveList"]
margin_top = 188.0
margin_right = 248.0
margin_bottom = 205.0
text = "Get the files from the 2nd floor"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
